Implemented the Slay.txt parsing functions.
Signed-off-by: rowan <rowan@rowancrowther.me.uk>